--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@ function login() {
     var set = {
       client_id: conf.client_id,
       redirect_uri: conf.redirect_uri,
-      scope: 'playlist-read playlist-read-private playlist-modify-public playlist-modify-private user-library-read user-library-modify',
+      scope: 'user-read-private user-read-email playlist-read-private playlist-read-collaborative playlist-modify-public playlist-modify-private user-library-read user-library-modify',
       response_type: 'token',
       show_dialog: 'true'
     };
